apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__defer_if_condition-2.snap
---
source: apollo-router/src/query_planner/mod.rs
expression: deferred_response
---
{
  "data": {
    "me": {
      "name": "Ada Lovelace",
      "username": "@ada",
      "__typename": "User",
      "id": "1"
    }
  },
  "path": [
    "me"
  ]
}
