apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__defer_if_condition-3.snap
---
source: apollo-router/src/query_planner/mod.rs
expression: defer_disabled
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada Lovelace",
      "username": "@ada"
    }
  }
}
