apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__defer_if_condition.snap
---
source: apollo-router/src/query_planner/mod.rs
expression: defer_primary_response
---
{
  "data": {
    "me": {
      "__typename": "User",
      "id": "1"
    }
  }
}
