apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__missing_fields_in_requires.snap
---
source: apollo-router/src/query_planner/tests.rs
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "stuff": {
      "id": "1",
      "aDetailsIsEnabled": true
    }
  }
}
