apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__parallel_failure-2.snap
---
source: apollo-router/src/query_planner/tests.rs
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": null,
  "errors": [
    {
      "message": "couldn't find mock for query {\"query\":\"{test{s1 id}}\"}",
      "extensions": {
        "code": "FETCH_ERROR"
      }
    }
  ],
  "extensions": {
    "valueCompletion": [
      {
        "message": "Cannot return null for non-nullable field Test.id",
        "path": [
          "test"
        ]
      },
      {
        "message": "Cannot return null for non-nullable field Test!.test",
        "path": [
          "test"
        ]
      }
    ]
  }
}
