apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__parallel_failure-3.snap
---
source: apollo-router/src/query_planner/tests.rs
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "test": {
      "id": "0",
      "s1": "s1",
      "s2": null,
      "s3": "s3"
    }
  }
}
