apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__parallel_failure.snap
---
source: apollo-router/src/query_planner/tests.rs
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "test": {
      "s1": null,
      "s2": "s2",
      "s3": "s3"
    }
  }
}
