apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__typename_propagation.snap
---
source: apollo-router/src/query_planner/tests.rs
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "node": {
      "__typename": "Book",
      "id": "1",
      "author": {
        "__typename": "Author"
      }
    }
  }
}
