apollo-router/src/query_planner/snapshots/apollo_router__query_planner__tests__typename_propagation2.snap
---
source: apollo-router/src/query_planner/tests.rs
expression: "serde_json::to_value(&response).unwrap()"
---
{
  "data": {
    "book": null
  },
  "errors": [
    {
      "message": "Could not fetch field",
      "path": [
        "book",
        "id"
      ],
      "extensions": {
        "code": "UNSATISFIED_FETCH_CONDITION"
      }
    }
  ],
  "extensions": {
    "valueCompletion": [
      {
        "message": "Null value found for non-nullable type ID",
        "path": [
          "book"
        ]
      }
    ]
  }
}
